management-api/overlays/test/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: management-api-route53
spec:
    host: management.test.thoth-station.ninja
    to:
        kind: Service
        name: management-api
        weight: 100
    tls:
        termination: ENC[AES256_GCM,data:+QayaQ==,iv:DnoOf45lP+RUDIL/VIqINp5E+fyVr6FSdQGFa1Usjek=,tag:vorOCj2CYMUfZyCuW+WPjA==,type:str]
        certificate: ENC[AES256_GCM,data:oZ98Xjcl4H6mYjjKS8+n++FyC3pFcBmHSQjaxlP8ZfBxnpGYSRzyAoN1JVPOTvNtLZeHKuXymLRm2igGAyqUuB/bCagIbPQaUOx464dt9nWJ0kVl9HEjrHAm3RDMD209sR5HoLsG+Fopbz6CN1UbyXgRDKsOXmRoAVtK7AUn3fkqfxsV4TW3RzqnwnBUlsdaOc+3Gme5V9Q8t+kWBhO1QKbWXJimOZxDmUnU774z77yrCesQtMfcWXKkcXMaEeTSl1JJfqIifWnj2CiByvrhUuQtMqF5Ar1p/hyatHtMf+eN4lzDrf69a4N2/tHmtAozWVpiCx637BlkhUb0RhQpCLcLKF1/P4BDLcNflIBEvNPsT+UUS5t9HRCk5are/2pWyTw6soSBLxBW2XUehanR+eE4uPUQxAFOUmd6TgFiQF0OQqQIPjgBmDA93wPnZ83Xi/HiDSV4SP9 [...]
        key: ENC[AES256_GCM,data:R2Wjw2RlFyfSbxTRT2EPnHAkLWVn55w9RIGgiKV+XcGWzyY90vS3W8QpR22MIVA3GYV/0lKJwlT5ZRhZmBPonR9fzecdTvn+H4CTz7gymZaXPMFoG1BPzXm5qjNrx2PEW+S0OFHFSHJw1jqbdg1zok2qkiJEBIabCzjiTlxJha+PKqOe1mTfgvUDhSxI5kSXw5yefmbOT4rGdle0E1jY6VP0JZHWWvPBmDL9bajzbm4aGAavIctoIkfX/ENN6fSG0DC0WvhapWq6S7f2RoefIFFONjl0jPoJgmER0vu2MhUR6m9pcjb63o5Ct/Tv1doXJ51rHS4veIYdJKJTy4StdHcrAt84YS8rxTlHUXaa5hzmew6WheuDXXnk6o7Qi2W0eJtflA6g3vG2SAHP3CKFUNmCkdUiEKAHHAXc2bPScF0A+XBtYLPUY9lMLDU1BnIYp8KJSrDio4hbWvHKErI [...]
        caCertificate: ENC[AES256_GCM,data:U9ouCH5vzD3bdiBDU32cgO+rfE7GW6elK6DZs808GoQqLQtnekEMm9NeChw4L2oqKIt6/yu6Vicr3cWOve0gwvaeATtnGZh/jiezuaOfHU3T1o0Yu9UgggljWUIvDGsyhlkVhIPSDcswttRUhk5E/BNNsBcXzNYxnvC0f0gYYoZ254bGksYlsbIU+WdPac31xTtWw/DPJAe2OP4jLyqmAMLi14H+giKL5Ex1dQIqM7Avg6Cbs9uidUUP+1ofJ1j4j+jvpVExZ3kH8YUaRa7zu4WSeniUadXtRiW+OdJ1xhL2Egd1wug4+wF1jrJsTSqHJs4kJxwVuaX0idrGOCDdGYiNaCUXEWnQG0KtcjfJx8oLUaplSEPKa/nYvSzUKCptpMMnjBxNTO3wrmK3rO058Kgv76kB2QODsvzzpwjHk/3E4Op1zS070RW5DDoyI90I1MLZLQbfu [...]
    wildcardPolicy: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2022-10-05T21:15:07Z"
    mac: ENC[AES256_GCM,data:ChYDttJLKX+Sts3tDdDRbJ0yOeKClMd0+wdE5h8uwQge2SmuQXhmMCzSbEF/xjN21N57j1fNFDBuS3cFbMk7SaU3wEDPAV+vpd4AHEaVKznZxpdDcUeWNJFNywPf4t1VM9WC+Y3MRdAk7aOOgj9h95zTOeSUs8/X5kmdOgQSCG4=,iv:+/GqPf81R2KkmiSbM/8syQnOjoaiLs4rTrFFz4GyAAM=,tag:dQt/2CiblHWx+9XrmyKraQ==,type:str]
    pgp:
        - created_at: "2022-10-05T21:15:06Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA1gbAjViyxWYAQ//T2uWnb/kZ84J9JrE+YSTFk7ZdAJfTr2uWFVbP7rf+EoV
[...]
            21dkZ+3UlY7aIl2kC5LLt5ZpJ1U/7qhLTeAB5uav+RNhFg==
            =mvCC
            -----END PGP MESSAGE-----
          fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
        - created_at: "2022-10-05T21:15:06Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcBMA+/WpawS9RPbAQgAlm9fPi8QbRIOzN1F4nNxVeM7S3IcYRvsai2c2uBfxUg2
[...]
            VUzjlkv1YyD3ZaSU10JvZO5I
            =q3II
            -----END PGP MESSAGE-----
          fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
        - created_at: "2022-10-05T21:15:06Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf/VB8UZrxdx8fSWZNRafwYyUCVTCv9ll5JJ7WeQo0OPAe0
[...]
            8HQWY+NEk9plGKsCB5/CVkORJ/9zIPf2sNxyk6HRZA==
            =WOWK
            -----END PGP MESSAGE-----
          fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
        - created_at: "2022-10-05T21:15:06Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA9aKBcudqifiAQ//WEONG19DBx2p3RI+qEt7p8qf4mHmhUK0PQSEpm77LlOb
[...]
            eTYHm8m9NMItpLnMWP6ABMCfFMLI/ymt+LKEDvFxbo6nwA==
            =FXmN
            -----END PGP MESSAGE-----
          fp: 0508677DD04952D06A943D5B4DC4116D360E3276
        - created_at: "2022-10-05T21:15:06Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFOA9LRbhPydJmLEAf/eJeOhv7x+oqLKY5+StAVXCFruELwRFYobCbjk0EzdQlB
[...]
            A3qo5s80yMs8XJWlcCW78arPKvfe1bvaKSKvLXZTI3rpt1w/
            =zwGR
            -----END PGP MESSAGE-----
          fp: 8D191B7544E9CCC3547B25A877E5A5B31D13A647
        - created_at: "2022-10-05T21:15:06Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA9NBwWNwg7uAAQ//SbJqO6MDsB/Ze7xj6EwL6hnEYQhB2juP1pBwNMvABKK2
[...]
            kGqkrcEDwGtS588xMXuAGHApuS92fKV7isRKqjVhfaiB0A==
            =SSDO
            -----END PGP MESSAGE-----
          fp: A01778ACB7CC4D41B00FDD78CCBE624D8FF6D016
        - created_at: "2022-10-05T21:15:06Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQILAxdcElc1DYwyAQ/3arDjx6TAivV4jAhe/8snXIWbuwtpyYG6bP5cDw6QQPDm
[...]
            =IOJS
            -----END PGP MESSAGE-----
          fp: CEBD171D5C7B1C5FB960301167AC891FB1FDF3E4
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.7.3
