management-api/overlays/test/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: management-api-route53
spec:
  host: management-api.test.thoth-station.ninja
  to:
    kind: Service
    name: management-api
  tls:
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIEkjCCA3qgAwIBAgIQCgFBQgAAAVOFc2oLheynCDANBgkqhkiG9w0BAQsFADA/
[...]
      KOqkqm57TH2H3eDJAkSnh6/DNFu0Qg==
      -----END CERTIFICATE-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIFfjCCBGagAwIBAgISA7xGfNe5m34OoKBzXA6vsegWMA0GCSqGSIb3DQEBCwUA
[...]
      A7+wvzmNt5Dn+y+gH949f2Zo
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQCvcvI1gwIQCVd4
[...]
      ZntAB8IvrhLuy+R7Wb19RyI=
      -----END PRIVATE KEY-----
    termination: edge
